plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = "25.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainModule = 'com.cyrcetech'
    mainClass = 'com.cyrcetech.app.CyrcetechApp'
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.2.1'
    implementation 'com.dlsc.formsfx:formsfx-core:11.6.0'
    implementation 'net.synedra:validatorfx:0.5.0'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'com.google.code.gson:gson:2.10.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview")
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ["--enable-preview"]
    options.release.set(25)
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        "--enable-preview",
        "--add-opens", "javafx.graphics/com.sun.glass.utils=ALL-UNNAMED",
        "--add-opens", "javafx.graphics/com.sun.marlin=ALL-UNNAMED",
        "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    ]
}
